build/apps/syncthing/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: storage
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: storage.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: syncthing-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`syncthing.storage.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: syncthing-web
          port: 8384
  tls:
    domains:
      - main: storage.anotherlife.pl
        sans:
          - .storage.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-storage
